<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Sargam</string>
    <string name="widget_square_name">Sargam Artwork</string>
    <string name="widget_wide_name">Sargam Wide</string>
    <string name="widget_compact_name">Sargam Compact</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="header_playlists">Playlists</string>
    <string name="header_songs">Songs</string>
    <string name="header_artists">Artists</string>
    <string name="header_albums">Albums</string>
    <string name="header_genres">Genres</string>
    <string name="header_now_playing">Now Playing</string>
    <string name="header_about">About</string>
    <string name="header_settings">Settings</string>
    <string name="header_search">Search</string>
    <string name="playlist">Playlist</string>
    <string name="playlist_auto">Smart Playlist</string>
    <string name="header_create_playlist">Create playlist</string>
    <string name="header_add_queue_to_playlist">Add queue to playlist</string>
    <string name="playlist_auto_new">New Smart Playlist</string>
    <string name="playlist_auto_choose_by">Choose songs by</string>
    <string name="first_launch_title">Welcome to Sargam</string>
    <string name="first_launch_detail"><![CDATA[By using this application, you agree to send
        anonymous crash reports.
        <br /><br />All data collected is purely anonymous and helps greatly to improve Sargam.
        This information will kept confidential with Marverenic and is subject to the
        <a href="http://try.crashlytics.com/terms/">Crashlytics privacy policy</a>]]>.
    </string>
    <string name="format_time">%1$s:%2$s</string>
    <string name="format_time_hours">%1$s:%2$s:%3$s</string>
    <string name="format_compact_song_info">%1$s - %2$s</string>
    <string name="action_refresh">Refresh Library</string>
    <string name="action_export_playlist">Save queue as playlist&#8230;</string>
    <string name="action_set_sleep_timer">Sleep Timer&#8230;</string>
    <string name="action_sort">Sort&#8230;</string>
    <string name="action_sort_random">Randomize</string>
    <string name="action_sort_name">Sort by name</string>
    <string name="action_sort_artist">Sort by artist</string>
    <string name="action_sort_album">Sort by album</string>
    <string name="action_sort_play">Sort by play count</string>
    <string name="action_sort_skip">Sort by skip count</string>
    <string name="action_sort_date_added">Sort by date added</string>
    <string name="action_sort_date_played">Sort by date played</string>
    <string name="action_disable_shuffle">Disable shuffle</string>
    <string name="action_enable_shuffle">Enable shuffle</string>
    <string name="action_enable_repeat">Enable repeat</string>
    <string name="action_disable_sleep_timer">Disable Sleep Timer</string>
    <string name="action_add_queue_to_playlist">Add queue to playlist&#8230;</string>
    <string name="action_clear_queue">Clear queue</string>
    <string name="action_done">Done</string>
    <string name="action_select">Select</string>
    <string name="action_navigate_up">Go up</string>
    <string name="action_include">Include folder</string>
    <string name="action_exclude">Exclude folder</string>
    <string name="action_remove">Remove</string>
    <string name="action_queue_next">Queue next</string>
    <string name="action_queue_last">Queue last</string>
    <string name="action_navigate_to_artist">Go to artist</string>
    <string name="action_navigate_to_album">Go to album</string>
    <string name="action_add_to_playlist">Add to playlist&#8230;</string>
    <string name="action_delete">Delete</string>
    <string name="action_edit_smart_playlist">Edit&#8230;</string>
    <string name="action_skip">Skip</string>
    <string name="action_play">Play</string>
    <string name="action_pause">Pause</string>
    <string name="action_previous">Previous</string>
    <string name="action_undo">Undo</string>
    <string name="action_create">Create</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_add">Add</string>
    <string name="action_add_new">Add new</string>
    <string name="action_agree">Agree</string>
    <string name="action_try_again">Try again</string>
    <string name="action_open_settings">Open settings</string>
    <string name="action_make_new_playlist">Make new playlist&#8230;</string>
    <string name="action_add_rule">Add rule</string>
    <string name="action_discard_changes">Discard changes</string>
    <string name="action_edit_playlist_rules">Edit filters</string>
    <string name="action_open_in_last_fm">Last.fm</string>
    <string name="confirm_disable_shuffle">Disabled shuffle</string>
    <string name="confirm_enable_shuffle">Enabled shuffle</string>
    <string name="confirm_disable_repeat">Disabled repeat</string>
    <string name="confirm_enable_repeat">Enabled repeat</string>
    <string name="confirm_enable_multi_repeat">Enabled Multi-Repeat %d</string>
    <string name="confirm_enable_repeat_one">Enabled repeat one</string>
    <string name="confirm_disable_sleep_timer">Disabled Sleep Timer</string>
    <string name="confirm_refresh_library">Library refreshed</string>
    <string name="confirm_clear_queue">Cleared queue</string>
    <string name="confirm_removed_rule">Removed rule</string>
    <string name="message_refresh_library_no_permission">Sargam doesn\'t have permission to read
        your music</string>
    <string name="message_play_error_not_found">Sargam couldn\'t find &#8220;%1$s&#8221;</string>
    <string name="message_play_error_io_exception">&#8220;%1$s&#8221; couldn\'t be played</string>
    <string name="error_hint_duplicate_playlist">Enter a unique playlist name</string>
    <string name="error_hint_empty_playlist">Enter a playlist name</string>
    <string name="message_added_song">Added &#8220;%1$s&#8221; to &#8220;%2$s&#8221;</string>
    <string name="message_created_playlist">Created playlist &#8220;%1$s&#8221;</string>
    <string name="message_removed_playlist">Deleted playlist &#8220;%1$s&#8221;</string>
    <string name="message_removed_song">Removed song &#8220;%1$s&#8221;</string>
    <string name="message_sorted_playlist_random">Randomized &#8220;%1$s&#8221;</string>
    <string name="message_sorted_playlist_name">Sorted &#8220;%1$s&#8221; by name</string>
    <string name="message_sorted_playlist_artist">Sorted &#8220;%1$s&#8221; by artist name</string>
    <string name="message_sorted_playlist_album">Sorted &#8220;%1$s&#8221; by album name</string>
    <string name="message_sorted_playlist_play">Sorted &#8220;%1$s&#8221; by play count</string>
    <string name="message_sorted_playlist_skip">Sorted &#8220;%1$s&#8221; by skip count</string>
    <string name="message_sorted_playlist_date_added">Sorted &#8220;%1$s&#8221; by date added</string>
    <string name="message_sorted_playlist_date_played">Sorted &#8220;%1$s&#8221; by date played</string>
    <string name="header_add_song_name_to_playlist">Add &#8220;%1$s&#8221; to playlist</string>
    <string name="confirm_add_songs">Added %1$d songs to playlist &#8220;%2$s&#8221;</string>
    <string name="confirm_dir_include_excluded">
        &#8220;%1$s&#8221; is already being excluded.
        Do you want to move it to your included folders?
    </string>
    <string name="confirm_dir_exclude_included">
        &#8220;%1$s&#8221; is already being included.
        Do you want to move it to your excluded folders?
    </string>
    <string name="confirm_dir_already_excluded">
        &#8220;%1$s&#8221; is already being excluded
    </string>
    <string name="confirm_dir_already_included">
        &#8220;%1$s&#8221; is already being included
    </string>
    <string name="message_removed_directory">Removed folder &#8220;%1$s&#8221;</string>
    <string name="nothing_playing">Nothing is playing</string>
    <string name="unknown_artist">Unknown Artist</string>
    <string name="unknown_album">Unknown Album</string>
    <string name="unknown">Unknown</string>
    <string name="empty_no_permission">Sargam needs permission to read your music library</string>
    <string name="empty_no_permission_detail">To show your music, grant Sargam access to storage</string>
    <string name="error_no_permission_dirs">To exclude folders, grant Sargam access to storage</string>
    <string name="empty">Couldn\'t find any music here</string>
    <string name="empty_detail">You can sync songs from your computer or download them from the Internet</string>
    <string name="empty_genres">Couldn\'t find any genres</string>
    <string name="empty_genres_detail">Make sure your music is correctly tagged</string>
    <string name="empty_playlists">You don\'t have any playlists</string>
    <string name="empty_playlists_detail">You can make a new one by pressing the &#8220;+&#8221; button</string>
    <string name="empty_playlist">This playlist is empty</string>
    <string name="empty_playlist_detail">You can add songs from the library page</string>
    <string name="empty_auto_playlist">This playlist is empty</string>
    <string name="about_version">Version</string>
    <string name="about_description">Sargam is a music player for Android 4.1 and higher focused on
        simplicity, performance, and design distributed under an Apache 2.0 license.</string>
    <string name="settings_category_general">General</string>
    <string name="appearance_header">Appearance</string>
    <string name="pref_category_library">Library</string>
    <string name="playback_header">Playback</string>
    <string name="default_page_pref">Default Page</string>
    <string name="switch_to_now_playing">Open Now Playing</string>
    <string name="switch_to_now_playing_detail_on">When a new song is chosen, the Now Playing page will be opened</string>
    <string name="switch_to_now_playing_detail_off">Changing songs won\'t navigate to another page</string>
    <string name="use_mobile">Use mobile data</string>
    <string name="use_mobile_description_on">Album artwork and other data will always be downloaded</string>
    <string name="use_mobile_description_off">Album artwork and other data will only be downloaded on Wi-Fi</string>
    <string name="logging_on">Anonymous usage data and crash information will be sent to AruTech</string>
    <string name="logging_off">Only anonymous crash information will be sent to AruTech</string>
    <string name="logging_description">Help improve Sargam</string>
    <string name="pref_directory_include">Include folders</string>
    <string name="pref_directory_exclude">Exclude folders</string>
    <string name="pref_equalizer">Equalizer</string>
    <string name="gesture_description">Enable now playing gestures</string>
    <string name="gesture_detail">Swipe across the album art to skip songs,
        or tap to play/pause music</string>
    <string name="pref_key_allow_logging" translatable="false">allowAnalytics</string>
    <string name="pref_key_use_mobile_net" translatable="false">useMobileData</string>
    <string name="pref_key_switch_to_playing" translatable="false">navigateToNewQueue</string>
    <string name="pref_key_enable_gestures" translatable="false">enableGestures</string>
    <string name="pref_key_default_page" translatable="false">landingPage</string>
    <string name="pref_key_included_dirs" translatable="false">Library.includedDirs</string>
    <string name="pref_key_excluded_dirs" translatable="false">Library.excludedDirs</string>
    <string name="button_play_description">Play Button</string>
    <string name="button_skip_description">Next Song Button</string>
    <string name="description_album_art">Album Art</string>
    <string name="header_folder">Folders</string>
    <string name="header_queue">Playing Queue</string>
</resources>