<!--suppress AndroidElementNotAllowed -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategoryCompat android:title="@string/appearance_header">
        <IntDropDownPreference
            android:defaultValue="1"
            android:dialogTitle="@string/default_page_pref"
            android:entries="@array/pages"
            android:entryValues="@array/page_values"
            android:key="@string/pref_key_default_page"
            android:title="Default Page" />
    </PreferenceCategoryCompat>
    <PreferenceCategoryCompat android:title="@string/pref_category_library">
        <Preference
            android:title="@string/pref_directory_include"
            android:key="@string/pref_key_included_dirs"
            android:fragment="com.marverenic.music.fragments.DirectoryListFragment"/>
        <Preference
            android:title="@string/pref_directory_exclude"
            android:key="@string/pref_key_excluded_dirs"
            android:fragment="com.marverenic.music.fragments.DirectoryListFragment"/>
    </PreferenceCategoryCompat>
    <PreferenceCategoryCompat android:title="@string/settings_category_general">
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="@string/pref_key_use_mobile_net"
            android:summaryOn="@string/use_mobile_description_on"
            android:summaryOff="@string/use_mobile_description_off"
            android:title="@string/use_mobile"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key_allow_logging"
            android:summaryOn="@string/logging_on"
            android:summaryOff="@string/logging_off"
            android:title="@string/logging_description"/>
    </PreferenceCategoryCompat>
    <PreferenceCategoryCompat android:title="@string/playback_header">
        <Preference
            android:title="@string/pref_equalizer"
            android:fragment="com.arutech.sargam.fragments.EqualizerFragment"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key_switch_to_playing"
            android:title="@string/switch_to_now_playing"
            android:summaryOn="@string/switch_to_now_playing_detail_on"
            android:summaryOff="@string/switch_to_now_playing_detail_off"/>
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="@string/pref_key_enable_gestures"
            android:title="@string/gesture_description"
            android:summary="@string/gesture_detail"/>
    </PreferenceCategoryCompat>

</PreferenceScreen>