<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"

        android:paddingLeft="@dimen/global_padding"
        android:paddingRight="@dimen/global_padding">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="@dimen/list_padding"
            android:paddingRight="@dimen/list_padding">

            <ImageView
                android:id="@+id/aboutAppIcon"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                tools:src="@mipmap/ic_launcher"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/app_name"
                style="@style/Base.TextAppearance.AppCompat.Title"
                android:textSize="24sp"/>

            <TextView
                android:id="@+id/aboutVersion"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/about_version"
                style="@style/TextAppearance.AppCompat.Subhead"
                android:textSize="16sp"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/about_description"
                style="@style/Base.TextAppearance.AppCompat.Caption"
                android:textSize="@dimen/list_text_header_size"/>


        </LinearLayout>

    </ScrollView>
</LinearLayout>